[project]
name = "split-chunks"
version = "1.0.0"
description = "Brutalist universal file chunker."
authors = [{ name = "live-by-unix" }]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/live-by-unix/Chunks"

[tool.setuptools.packages.find]
where = ["."]
include = ["chunk"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
