[project]
name = "split_chunks"
version = "1.0.0"
description = "Brutalist universal file chunker."
authors = [{ name = "live-by-unix" }]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://portfoliounix.pages.dev"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["chunk"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
